part1/exer1.12/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-v0-6-svc
spec:
  type: ClusterIP
  selector:
    app: project-v0-6
  ports:
    - protocol: TCP
      port: 2352
      targetPort: 8080
